--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,25 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.0",
+		"php": ">=5.6",
 		"ext-curl": "*",
+		"lazyjsonmapper/lazyjsonmapper": "^1.6.1",
 		"netresearch/jsonmapper": "^1.0",
 		"guzzlehttp/guzzle": "^6.2"
+	},
+	"require-dev": {
+		"friendsofphp/php-cs-fixer": "^2.8.0"
 	},
 	"autoload": {
         "psr-4": {
             "RAE\\": "src/"
         }
+    },
+	"scripts": {
+        "codestyle": [
+            "lazydoctor -c composer.json -pfo >/dev/null",
+            "php-cs-fixer fix --config=.php_cs.dist --allow-risky yes",
+            "php devtools/checkStyle.php x"
+        ]
     }
 }
